// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "sync_score/proto";
// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

package score;

// The greeting service definition.
service GameCenter {
    rpc SendGameAction (Action) returns (ActionReply) {}
}

message Action {
  string gamePoster= 1;
  string team = 2;
  string playerName = 3; 
  string description = 4;
  int32 minute = 5;
  optional int32 second = 6;
}

message ActionReply {
  string status = 1;
}